<resources>
    <string name="app_name">Sudoku App</string>

    <string name="camera_button">Capture Sudoku</string>
    <string name="exit_label">Quit</string>
    <string name="createSudoku_label">Create Sudoku</string>
    <string name="information_label">Information</string>
    <string name="playSudoku_label">Play Sudoku!</string>
    <string name="creator">Robert Bayliss</string>
    <string name="purpose">This App is designed to create Sudokus, capture images of Sudokus, then
        using optical character recognition, allow them to be completed in the App. Additionally it
        will identify solutions on these so that uses can check their accuracy.
        \nThis Application was created as part of my Major project for university. As such, it
        needed to demonstrate my ability to develop software and write efficient code, all whist
        following a software development methodology to achieve the stated goal.</string>
    <string name="credits">The App makes use of: \n  -OpenCV \n  -Tesseract OCR \n Both of these
        are available as open-source software and licenced user the OpenCV Licenced and Apache
        License</string>
    <string name="back_label">Back</string>
    <string name="loadingSudoku_label">Creating Sudoku</string>
    <string name="Play_label">Play</string>
    <string name="solve_label">Solve</string>
    <string name="Photo_label">Photo of Sudoku</string>
</resources>
