<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs39440.rob41.sudokuapp.LoadingActivity">

    <TextView
        android:id="@+id/loadingSudoku_title"
        android:text="@string/loadingSudoku_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:id="@+id/templateHolder"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/loadingSudoku_title"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/templateGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/grid"
            android:columnCount="9"
            android:paddingBottom="5dp"
            android:rowCount="9"></GridLayout>

        <ImageView
            android:id="@+id/capturedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:contentDescription="@string/Photo_label"
            android:paddingTop="5dp"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/templateButtonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loading_back_button"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:onClick="closeActivity"
            android:text="@string/back_label"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loading_play_button"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:onClick="createPlaySudoku"
            android:text="@string/Play_label"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>